Fix horizontal scrolling on ipad and tiny spacing issues.

--- a/src/landing.scss
+++ b/src/landing.scss
@@ -1,7 +1,8 @@
 $content-width: 980px;
 
 html, body {
-  height: 100%
+  height: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -11,16 +12,17 @@ body {
   font-family: 'Lato', sans-serif;
   margin: 0;
   position: relative;
-  max-width: $content-width;
-  margin-left: auto;
-  margin-right: auto;
-  overflow-x: hidden;
 }
 
-header, section, footer > #content {
+header, section, footer > #content, #container {
   max-width: $content-width;
   margin-left: auto;
   margin-right: auto;
+}
+
+#container {
+  position: relative;
+  height: 100%;
 }
 
 header {
@@ -62,6 +64,12 @@ header {
   padding-top: 100px;
 }
 
+@media(min-width: 1000px) and (max-height: 670px){
+  #stores {
+    padding-top: 50px;
+  }
+}
+
 @media (min-width: 1000px) {
   #iphones {
     position: absolute;
@@ -99,7 +107,7 @@ footer {
     position: absolute;
     bottom: 0;
     width: 3000px;
-    margin-left: -1050px;
+    margin-left: -1010px;
   }
 
   #content {
@@ -136,7 +144,11 @@ footer {
 
   #links {
     a {
-      padding: 0 6px;
+      padding-left: 6px;
+    }
+
+    a:nth-last-child(n+2) {
+      padding-right: 6px;
     }
 
     a:nth-child(n+2) {
